--- a/.github/workflows/update-papers.yml
+++ b/.github/workflows/update-papers.yml
@@ -6,7 +6,7 @@ on:
     - cron: '0 6 * * *'
   workflow_dispatch: # Allow manual triggering
   push:
-    branches: [ main ]
+    branches: [ main ] # Triggers on push to main branch
 
 jobs:
   update-papers:
